Project

General

Profile

Actions

Bug #24640

closed

test_cls_rgw.sh cls_rgw.index_suggest fail with EINVAL

Added by Sage Weil almost 6 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
Urgent
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

2018-06-22T19:21:47.155 INFO:tasks.workunit.client.0.smithi175.stdout:[ RUN      ] cls_rgw.index_suggest
2018-06-22T19:21:48.841 INFO:tasks.workunit.client.0.smithi175.stdout:/home/jenkins-build/build/workspace/ceph-dev-new-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos7/DIST/centos7/MACHINE_SIZE/huge/release/14.0.0-768-g27371cf/rpm/el7/BUILD/ceph-14.0.0-768-g27371cf/src/test/cls_rgw/test_cls_rgw.cc:373
: Failure
2018-06-22T19:21:48.841 INFO:tasks.workunit.client.0.smithi175.stdout:      Expected: 0
2018-06-22T19:21:48.842 INFO:tasks.workunit.client.0.smithi175.stdout:To be equal to: ioctx.operate(bucket_oid, op)
2018-06-22T19:21:48.842 INFO:tasks.workunit.client.0.smithi175.stdout:      Which is: -22
2018-06-22T19:21:48.842 INFO:tasks.workunit.client.0.smithi175.stdout:[  FAILED  ] cls_rgw.index_suggest (1686 ms)

/a/sage-2018-06-22_17:54:15-rados-wip-sage-testing-20180622-0924-distro-basic-smithi/2690110

Related issues 3 (0 open3 closed)

Related to RADOS - Bug #24787: cls_rgw.index_suggest FAILEDDuplicate07/05/2018

Actions
Related to rgw - Bug #24280: rgw: fail to recover index from crashResolvedJ. Eric Ivancich05/24/2018

Actions
Has duplicate rgw - Bug #25071: Workunit test cls/test_cls_rgw.sh fails in upgrade/luminous-x/parallel (master)Duplicate07/24/2018

Actions
Actions #1

Updated by Casey Bodley almost 6 years ago

likely caused by recent changes to rgw_dir_suggest_changes() in https://github.com/ceph/ceph/pull/22217

Actions #2

Updated by Casey Bodley almost 6 years ago

  • Assignee set to J. Eric Ivancich
Actions #3

Updated by J. Eric Ivancich almost 6 years ago

I have confirmed that commit https://github.com/ceph/ceph/pull/22217 is the culprit. The commit before the merge succeeds on the test, the commit with the merge fails.

Will now work on diagnosing underlying issue.

Actions #5

Updated by J. Eric Ivancich almost 6 years ago

I'm currently evaluating the fix.

Actions #6

Updated by Yuri Weinstein almost 6 years ago

  • Related to Bug #24787: cls_rgw.index_suggest FAILED added
Actions #7

Updated by Sage Weil almost 6 years ago

  • Related to Bug #24280: rgw: fail to recover index from crash added
Actions #9

Updated by J. Eric Ivancich almost 6 years ago

Tianshan Qu wrote:

fix in https://github.com/ceph/ceph/pull/22798

This PR was closed and replaced with PR in previous comment.

Actions #10

Updated by Nathan Cutler almost 6 years ago

  • Has duplicate Bug #25071: Workunit test cls/test_cls_rgw.sh fails in upgrade/luminous-x/parallel (master) added
Actions #11

Updated by Nathan Cutler almost 6 years ago

  • Backport set to mimic, luminous
Actions #12

Updated by Nathan Cutler almost 6 years ago

I added "Backport: mimic, luminous" because the mimic and luminous versions of ceph_test_cls_rgw are now broken when run against a cluster running master/nautilus.

Actions #13

Updated by J. Eric Ivancich almost 6 years ago

Nathan Cutler wrote:

I added "Backport: mimic, luminous" because the mimic and luminous versions of ceph_test_cls_rgw are now broken when run against a cluster running master/nautilus.

Yes, the backports are appropriate. Their trackers are -- http://tracker.ceph.com/issues/24629 and http://tracker.ceph.com/issues/24628.

Actions #14

Updated by Nathan Cutler almost 6 years ago

  • Backport deleted (mimic, luminous)

Eric is backporting #24280 and #24640 together - the backport PRs are already open and they contain both fixes, so dropping the backport tag for this one.

Actions #15

Updated by Yuri Weinstein almost 6 years ago

Eric Ivancich wrote:

Addressed by https://github.com/ceph/ceph/pull/22937 .

merged

Actions #16

Updated by Orit Wasserman over 5 years ago

  • Status changed from 12 to Resolved
Actions

Also available in: Atom PDF