rgw: continue enoent index in dir_suggest

since we do nothing to the not exists index, just continue to
process other indexes and pass the test case

Fixes: http://tracker.ceph.com/issues/24640

Signed-off-by: Tianshan Qu <tianshan@xsky.com>